4.x: Global Service Registry support in tests (#9656)
* Refactoring of global service registry to use Helidon Context to store the value.

* Testing support for Service registry.
This change ensures that all tests are run in a specific "common Context" that holds the current global `ServiceRegistry`.
This way each test class has its own global `ServiceRegistry` instance that does not interfere with other test classes.